2017-06-07  Simon Pfreundschuh <simonpf@chalmers.se>

	* arts-2-3-702

	* src/oem.h(ArtsLog): Some cosmetical fixes for the logging class.

	* src/m_oem.cc (oem_template): Implemented some changes discussed
	with Patrick. Also fixed the length of the ml_ga_history_vector.

	* 3rdparty/invlib/*: Updated invlib library

	* src/matpack.h: Replaced Macros by using directives. Same effect, but doesn't
	break other code that uses the std:: prefix for the isnan and isinf functions.

2017-06-06  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-701

	* src/m_oem.cc (x2artsScatSpecies): New WSM.

	* src/m_cloudradar.cc (pnd_fieldCalcFromParticleBulkProps): Did
	not work with no jacobian calculations.

2017-06-06  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-700

	* 3rdparty/polradtran/rt4/radmat.f:

	Rename daxpy and dswap to rt4_* to avoid name clash with function from
	external BLAS library. Avoids possible segfaults due to implementation
	differences. Reported by Patrick and Simon.

2017-06-05  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-699

	* First radar jacobian in place. So far just considering the
	change in back-scattering, effect on attenuation of both gases and
	particles to be added.

	[But still happy as I spent 5 hours on bug hunting, finding that
	all had been correct from start. I just strongly under-estimated
	the particle attenuation and my test did not work as expected.]

	* src/m_cloudradar.cc (iyActiveSingleScat): Work around jacobian
	calculations.

	* src/m_cloudradar.cc (yActive): Added geo_pos_agenda as input.
	y_f, y_geo etc. now set. Now alos jacobian quantities processed
	and the jacobian matrix is compiled.

	* src/workspace.cc: Updated and polished text for *y_geo*.

	* src/m_rte.cc (yCalc): Default for y_geo is now NAN, instead of -99999.

	* src/m_transmitter.cc (iyRadioLink, iyTransmissionStandard):
	Initial check of iy_transmission now using .empty.
